--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/color": "^4.2.0",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
